force-app/main/default/objects/Flow_State__c/Flow_State__c.object-meta.xml
<CustomObject>
    <description>Tracks/Saves Visual Workflow Progress and CAP Data</description>
    <label>CAP State</label>
    <nameField>
        <displayFormat>FS-{000000}</displayFormat>
        <label>Flow State Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAP States</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>