force-app/main/default/objects/Flow_State__c/fields/Accept_Risk__c.field-meta.xml
<CustomField>
    <fullName>Accept_Risk__c</fullName>
    <formula>/*if(
    contains(
        At_Risk_Status__c,
        &apos;Accept&apos;
    ),
    true,
    false
)*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accept Risk To Be Deleted</label>
    <type>Checkbox</type>
</CustomField>