force-app/main/default/objects/Flow_State__c/fields/At_Risk_KPI__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>At Risk KPI</label>
    <referenceTo>At_Risk_KPI__c</referenceTo>
    <relationshipName>Flow_States</relationshipName>
    <type>Lookup</type>
</CustomField>