force-app/main/default/objects/Flow_State__c/fields/At_Risk_Override_Date__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Override_Date__c</fullName>
    <formula>if(
    AND( CAP_Complete__c , IMGA__c, NOT(ISBLANK(IMGA_Risk_Assessment__r.At_Risk_Override_Date__c))),
    text(
        month(
            IMGA_Risk_Assessment__r.At_Risk_Override_Date__c
        )
    ) &amp; &apos;/&apos; &amp; text(
        day(
            IMGA_Risk_Assessment__r.At_Risk_Override_Date__c
        )
    ) &amp; &apos;/&apos; &amp; text(
        year(
            IMGA_Risk_Assessment__r.At_Risk_Override_Date__c
        )
    ),
    &apos;N/A&apos;
)</formula>
    <label>At Risk Override Date</label>
    <type>Text</type>
</CustomField>