force-app/main/default/objects/Flow_State__c/fields/CAP_0__c.field-meta.xml
<CustomField>
    <fullName>CAP_0__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAP 0</label>
    <referenceTo>CAP__c</referenceTo>
    <relationshipName>Flow_States1</relationshipName>
    <type>Lookup</type>
</CustomField>