force-app/main/default/objects/Flow_State__c/fields/CAP_1__c.field-meta.xml
<CustomField>
    <fullName>CAP_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CAP 1</label>
    <referenceTo>CAP__c</referenceTo>
    <relationshipName>Flow_States2</relationshipName>
    <type>Lookup</type>
</CustomField>