force-app/main/default/objects/Flow_State__c/fields/CAP_Complete__c.field-meta.xml
<CustomField>
    <fullName>CAP_Complete__c</fullName>
    <formula>IF(  Total_Number_of_Levels__c = Total_Number_of_Completed_Levels__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAP Complete</label>
    <type>Checkbox</type>
</CustomField>