force-app/main/default/objects/Flow_State__c/fields/CAP_Feedback_2__c.field-meta.xml
<CustomField>
    <fullName>CAP_Feedback_2__c</fullName>
    <formula>$Setup.FlowScreenSettings__c.CAP_Feedback_2__c</formula>
    <label>CAP Feedback 2</label>
    <type>Text</type>
</CustomField>