force-app/main/default/objects/Flow_State__c/fields/CAP_Feedback_3__c.field-meta.xml
<CustomField>
    <fullName>CAP_Feedback_3__c</fullName>
    <formula>$Setup.FlowScreenSettings__c.CAP_Feedback_3__c</formula>
    <label>CAP Feedback 3</label>
    <type>Text</type>
</CustomField>