force-app/main/default/objects/Flow_State__c/fields/Category_0__c.field-meta.xml
<CustomField>
    <fullName>Category_0__c</fullName>
    <formula>LEFT( CAP_0__r.Category_Code__c ,  LEN(CAP_0__r.Category_Code__c)-6 )</formula>
    <label>Category 0</label>
    <type>Text</type>
</CustomField>