force-app/main/default/objects/Flow_State__c/fields/Category_1__c.field-meta.xml
<CustomField>
    <fullName>Category_1__c</fullName>
    <formula>LEFT( CAP_1__r.Category_Code__c ,  LEN(CAP_1__r.Category_Code__c)-4 )</formula>
    <label>Category 1</label>
    <type>Text</type>
</CustomField>