force-app/main/default/objects/Flow_State__c/fields/Category_2__c.field-meta.xml
<CustomField>
    <fullName>Category_2__c</fullName>
    <formula>LEFT( CAP_2__r.Category_Code__c ,  LEN(CAP_2__r.Category_Code__c)-2 )</formula>
    <label>Category 2</label>
    <type>Text</type>
</CustomField>