force-app/main/default/objects/Flow_State__c/fields/Category_START__c.field-meta.xml
<CustomField>
    <fullName>Category_START__c</fullName>
    <formula>LEFT( CAP__r.Category_Code__c ,  LEN(CAP__r.Category_Code__c)-8 )</formula>
    <label>Category START</label>
    <type>Text</type>
</CustomField>