force-app/main/default/objects/Flow_State__c/fields/Field_Type_0__c.field-meta.xml
<CustomField>
    <fullName>Field_Type_0__c</fullName>
    <formula>TEXT(CAP_0__r.Field_Type_0__c)</formula>
    <label>Field Type 0</label>
    <type>Text</type>
</CustomField>