force-app/main/default/objects/Flow_State__c/fields/IMGA_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>IMGA_Risk_Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IMGA Risk Assessment</label>
    <referenceTo>IMGA_Risk_Assessment__c</referenceTo>
    <relationshipName>Flow_States</relationshipName>
    <type>Lookup</type>
</CustomField>