force-app/main/default/objects/Flow_State__c/fields/Letter_0__c.field-meta.xml
<CustomField>
    <fullName>Letter_0__c</fullName>
    <formula>TEXT(CAP_0__r.Letter_0__c)</formula>
    <label>Letter 0</label>
    <type>Text</type>
</CustomField>