force-app/main/default/objects/Flow_State__c/fields/Letter_Label_1__c.field-meta.xml
<CustomField>
    <fullName>Letter_Label_1__c</fullName>
    <formula>CAP_1__r.Letter_Label_1__c</formula>
    <label>Letter Label 1</label>
    <type>Text</type>
</CustomField>