force-app/main/default/objects/Flow_State__c/fields/Letter_Label_2__c.field-meta.xml
<CustomField>
    <fullName>Letter_Label_2__c</fullName>
    <formula>CAP_2__r.Letter_Label_2__c</formula>
    <label>Letter Label 2</label>
    <type>Text</type>
</CustomField>