force-app/main/default/objects/Flow_State__c/fields/Letter_Label_3__c.field-meta.xml
<CustomField>
    <fullName>Letter_Label_3__c</fullName>
    <formula>CAP_3__r.Letter_Label_3__c</formula>
    <label>Letter Label 3</label>
    <type>Text</type>
</CustomField>