force-app/main/default/objects/Flow_State__c/fields/Letter_Value_0__c.field-meta.xml
<CustomField>
    <fullName>Letter_Value_0__c</fullName>
    <formula>CAP_0__r.Letter_Value_0__c</formula>
    <label>Letter Value 0</label>
    <type>Text</type>
</CustomField>