force-app/main/default/objects/Flow_State__c/fields/RED_ALERT__c.field-meta.xml
<CustomField>
    <fullName>RED_ALERT__c</fullName>
    <formula>IF(IMGA__c=True,  IMGA_Risk_Assessment__r.Red_Alert_Flag__c , False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RED ALERT</label>
    <type>Checkbox</type>
</CustomField>