force-app/main/default/objects/Flow_State__c/fields/Red_Alert_Reason__c.field-meta.xml
<CustomField>
    <fullName>Red_Alert_Reason__c</fullName>
    <label>Red Alert Reason</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>