force-app/main/default/objects/Flow_State__c/fields/Total_Number_of_Completed_Levels__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Completed_Levels__c</fullName>
    <label>Total Number of Completed Levels</label>
    <summaryFilterItems>
        <field>CAP_Level__c.Complete__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CAP_Level__c.Flow_State__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>