force-app/main/default/objects/Flow_State__c/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <label>Trigger</label>
    <length>64</length>
    <type>Text</type>
</CustomField>