force-app/main/default/objects/Flow_State__c/fields/User_Feedback_1__c.field-meta.xml
<CustomField>
    <fullName>User_Feedback_1__c</fullName>
    <label>User Feedback 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>