force-app/main/default/objects/Flow_State__c/validationRules/Five_CAP_Level_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>Five_CAP_Level_Max</fullName>
    <active>true</active>
    <description>Maximum of 5 CAP Levels are allowed.</description>
    <errorConditionFormula>Total_Number_of_Levels__c &gt; 5</errorConditionFormula>
    <errorMessage>Flow Requires 5 CAP Levels.</errorMessage>
</ValidationRule>