force-app/main/default/objects/Flow_State__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>IMGA_Risk_Assessment__c</columns>
    <columns>Customer_Account__c</columns>
    <columns>At_Risk_KPI__c</columns>
    <columns>CAP__c</columns>
    <columns>CAP_0__c</columns>
    <columns>CAP_1__c</columns>
    <columns>CAP_2__c</columns>
    <columns>CAP_3__c</columns>
    <columns>Total_Number_of_Completed_Levels__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Business_Function__c</columns>
    <columns>Trigger__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>